--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "rm -rf lib && tsc",
+    "build-linux": "rm -rf lib && tsc",
+    "build-windows": "rmdri /s lib && tsc",
     "build:test": "rm -rf testDist && tsc -p test/tsconfig.json",
     "lint": "eslint src/",
     "fmt": "prettier --write src/ && yarn lint --fix",
